dataset1235/2025-2/1955397009/users/1607202972/executions/2304143742_359761547.log
== SUBMISSION (2025-09-02 12:44:18)
-- CODE: 
idade=int(input())
if idade>=2:
  print("paga")
else:
  print("não_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
não_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
não_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:42:59)
-- CODE: 
idade=int(input())
if idade>=2:
  print("paga")
else:
  print("não paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
não paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
não paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:44:13)
-- CODE: 
idade=int(input())
if idade>=2:
  print("paga")
else:
  print("não_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
não_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
não_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:44:34)
-- CODE: 
idade=int(input())
print(idade)
if idade>=2:
  print("paga")
else:
  print("não_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
não_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
não_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:43:30)
-- CODE: 
idade=int(input())
print(Idade)
if idade>=2:
  print("paga")
else:
  print("não paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Idade)
          ^^^^^
NameError: name 'Idade' is not defined. Did you mean: 'idade'?
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Idade)
          ^^^^^
NameError: name 'Idade' is not defined. Did you mean: 'idade'?
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Idade)
          ^^^^^
NameError: name 'Idade' is not defined. Did you mean: 'idade'?
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Idade)
          ^^^^^
NameError: name 'Idade' is not defined. Did you mean: 'idade'?
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Idade)
          ^^^^^
NameError: name 'Idade' is not defined. Did you mean: 'idade'?
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Idade)
          ^^^^^
NameError: name 'Idade' is not defined. Did you mean: 'idade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:42:32)
-- CODE: 
idade=int(input())
if idade>=2:
  print("Paga")
else:
  print("Não paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Não paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Não paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:42:24)
-- CODE: 
idade=int(input())
print(idade)
if idade>=2:
  print("Paga")
else:
  print("Não paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Não paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Não paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:44:52)
-- CODE: 
idade=int(input())
print(idade)
if idade>=2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:43:51)
-- CODE: 
idade=int(input())
print(idade)
if idade>=2:
  print("paga")
else:
  print("não paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
não paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
não paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
